--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 REACT_APP_API_URL=https://medion-blog.herokuapp.com/api/
-REACT_APP_SITE_TITLE=ThIS iS mY bLoH
+REACT_APP_SITE_TITLE=Volodymyr's website
