--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp public/404.html build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build && cp public/404.html build",
     "deploy": "gh-pages --dist build --branch master",
     "build-deploy": "npm run build && npm run deploy && git add . && git commit -m \"updated\" && git push origin source",
     "test": "react-scripts test",
